answers/5-5-2-3-1/manifests/rearchitect/bookinfo-strangler-proxy.yaml
#   
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
---
apiVersion: v1
kind: Service
metadata:
  name: strangler-proxy
  namespace: bookinfo
  labels:
    app: strangler-proxy
spec:
  ports:
  - name: http
    port: 9080
    targetPort: 10000
  selector:
    app: strangler-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strangler-proxy
  namespace: bookinfo
  labels:
    app: strangler-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: strangler-proxy
  template:
    metadata:
      labels:
        app: strangler-proxy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.26.2
        imagePullPolicy: IfNotPresent
        args:
        - --config-path
        - /etc/envoy/envoy-custom.yaml
        ports:
        - name: http
          containerPort: 10000
        - name: admin
          containerPort: 9901
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
      volumes:
      - name: envoy-config 
        configMap:
          name: strangler-proxy
          items:
          - key: envoy-custom.yaml
            path: ./envoy-custom.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: strangler-proxy
  namespace: bookinfo
  labels:
    app: strangler-proxy
data:
  envoy-custom.yaml: |
    static_resources:

      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              access_log:
              - name: envoy.access_loggers.stdout
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  matcher:
                    matcher_tree:
                      input:
                        name: request-headers
                        typed_config:
                          "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                          header_name: :path
                      prefix_match_map:
                        map:
                          "/reviews/ratings":
                            action:
                              name: route_ratings
                              typed_config:
                                "@type": type.googleapis.com/envoy.config.route.v3.RouteList
                                routes:
                                - match:
                                    prefix: "/reviews/ratings"
                                    headers:
                                    - name: :method
                                      exact_match: GET
                                  route:
                                    prefix_rewrite: "/ratings"
                                    host_rewrite_literal: ratings
                                    cluster: ratings
                          "/":
                            action:
                              name: route_reviews
                              typed_config:
                                "@type": type.googleapis.com/envoy.config.route.v3.Route
                                match:
                                  prefix: "/"
                                route:
                                  host_rewrite_literal: reviews
                                  cluster: reviews

      clusters:
      - name: ratings
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        load_assignment:
          cluster_name: ratings
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: ratings
                    port_value: 9080
      - name: reviews
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        load_assignment:
          cluster_name: reviews
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: reviews
                    port_value: 9080
